Correct footer not being aligned to left

--- a/style.css
+++ b/style.css
@@ -127,9 +127,10 @@ button {
 }
 
 footer {
-    width: 100%;
+    width: 100vw;
     position: fixed;
     bottom: 0;
+    left: 0;
     display: flex;
     justify-content: space-between;
     background-color: #f2f2f2;
@@ -140,11 +141,11 @@ footer {
 }
 
 #footer-ul-left {
-    padding-left: 22px;
+    padding-left: 30px;
 }
 
 #footer-ul-right {
-    padding-right: 38px;
+    padding-right: 30px;
 }
 
 #footer-ul-left li {
